[package]
name = "hls_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.41.1", features = ["full"] }
lapin = { version = "2.5.0", features = ["native-tls"] }
url = "2.5.0"
serde_json = "1.0"

